fixed a bug where bestiary list would try to squish onto the screen instead of scroll

--- a/server/public/css/custom.css
+++ b/server/public/css/custom.css
@@ -219,6 +219,7 @@ div.body-area .content-section {
 div.body-area md-card {
   width: 100%;
   max-width: 1200px;
+  display: inline-block;
 }
 
 div.body-area md-sidenav.bestiary-sidenav.md-locked-open {
